<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filterLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:background="@color/backgroundColor"
    tools:context=".ui.fragments.filter.FilterFragment">


    <Button
        android:id="@+id/button_alcohol"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/boogaloo"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/round_button"
        android:text="@string/alcoholic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_non_alcoholic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/boogaloo"
        android:textStyle="bold"
        android:textSize="24sp"
        android:background="@drawable/round_button"
        android:text="@string/non_alcoholic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_alcohol" />

    <Button
        android:id="@+id/button_popular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/boogaloo"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/popular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_non_alcoholic" />

    <Button
        android:id="@+id/button_latest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/round_button"
        android:text="@string/latest"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/boogaloo"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_popular" />


</androidx.constraintlayout.widget.ConstraintLayout>